TGR-300: update everything to be ready for openjdk17